--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,15 @@
 </head>
 
 <body>
-  <ul>
+  <!-- <ul>
     <li>
       <a href="./1-timer.html">Timer</a><br>
       <a href="./2-snackbar.html">Snackbar</a><br>
     </li>
-  </ul>
-
+  </ul> -->
+  <div class="search-bar"> <input type="text" placeholder="Search images..." id="search-input" />
+    <button>Search</button>
+  </div>
 
 
 </body>
