--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,17 @@
     </li>
   </ul> -->
   <div class="search-bar"> <input type="text" placeholder="Search images..." id="search-input" />
-    <button>Search</button>
+    <button type="button" id="search-button">Search</button>
   </div>
+  <ul class="gallery"></ul>
 
-
+  <script src="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+    "></script>
+  <link href="
+    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+    " rel="stylesheet">
+  <script src="./main.js" type="module"></script>
 </body>
 
 </html>
