--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css" />
+  <link href="
+      https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
+      " rel="stylesheet">
 
 </head>
 
@@ -26,12 +29,9 @@
   </div>
   <ul class="gallery"></ul>
 
-  <script src="
+  <!-- <script src="
     https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-    "></script>
-  <link href="
-    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css
-    " rel="stylesheet">
+    "></script> -->
   <script src="./main.js" type="module"></script>
 </body>
 
