--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
   </div>
   <ul class="gallery"></ul>
 
-  <!-- <script src="
-    https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-    "></script> -->
+
   <script src="./main.js" type="module"></script>
+  <script src="./js/pixabay-api.js" type="module"></script>
+  <script src="./js/render-functions.js" type="module"></script>
 </body>
 
 </html>
